# top_100_clickhouse

./: .gitignore  README.md  docker-compose.yml  pyproject.toml  run.sh
app/: initial_data.py  main.py
app/api/api_v1/: api.py
app/api/api_v1/endpoints/: words.py
app/core/: config.py
app/db/: client.py  queries.py
